--- a/3.ejerciciosEntrada.html
+++ b/3.ejerciciosEntrada.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/42220f3fc7.js" crossorigin="anonymous"></script>
     <!-- Mis scripts -->
     <script src="3.ejerciciosEntrada.js" defer></script>
     <!-- Bootstrap -->
@@ -15,13 +13,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
+    <!-- Estilos -->
+    <link rel="stylesheet" href="3.stylesEjerciciosEntrada.css">
     <title>Document</title>
 </head>
 
 <body>
 
-    <div class="card-group p-5 d-block">
-        <div class="card mb-5">
+    <div class="card-group p-5">
+        <div class="row">
+        <div class="card mb-5 col-lg-6">
             <div class="card-header">
                 <p>1. Confeccionar programa que permita cargar el nombre de un usuario
                     y su email por teclado. Mostrar posteriormente los datos en la página
@@ -32,7 +33,8 @@
                 <div class="mb-3 text-center">
                     <label for="intNombre">Nombre</label>
                     <input type="text" id="intNombre" class="form-text m-3">
-                    <label for="intEmail">Email</label>
+                    <br>
+                    <label for="intEmail" class="m-2">Email</label>
                     <input type="text" id="intEmail" class="form-text m-3">
                 </div>
                 <div id="resultados1" class="mb-4 text-center">
@@ -43,7 +45,7 @@
                 </div>
             </div>
         </div>
-        <div class="card">
+        <div class="card mb-5 col-lg-6">
             <div class="card-header">
                 <p>2. Realizar la carga del radio de una circunferencia, mostrar por pantalla 
                     el área de este.
@@ -62,7 +64,30 @@
                 </div>
             </div>
         </div>
-
+        <div class="card mb-5 col-lg-6">
+            <div class="card-header">
+                <p>3. Escribir un programa en el cual se ingresen las edades de 4
+                    personas, calcular la suma del mayor y del menor junto al producto
+                    del tercero con el segundo.
+                </p>
+            </div>
+            <div class="card-body">
+                Introduce cuatro edades:
+                <div class="mb-3 text-center">
+                    <input type="number" class="form-text m-3 edadEj3">
+                    <input type="number" class="form-text m-3 edadEj3">
+                    <input type="number" class="form-text m-3 edadEj3">
+                    <input type="number" class="form-text m-3 edadEj3">
+                </div>
+                <div id="resultados3" class="mb-4 text-center">
+                <!-- Aquí rellenará js el área de la circunferencia -->
+                </div>
+                <div class="text-center">
+                    <button class="btn btn-dark btn-lg" id="botonEj3" onclick="ejercicio3()">Enviar</button>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 
 </body>
