eliminada var tonta de 4.0

--- a/4.0 ejercicios/indexJavierLasso4.0.html
+++ b/4.0 ejercicios/indexJavierLasso4.0.html
@@ -9,10 +9,9 @@
 <body>
     <script>
         let delegaciones = [[],[],[]];
-        let z = "";
         
         for (let i = 0; i < 3; i++) {
-            while (z !== 0) {
+            while (true) {
                 let empleado = prompt(`Introduce el nombre del empleado (del ${i})`);
                 if (empleado == 0) { break;}
                 let sueldo = prompt(`Introduce el sueldo del empleado (del ${i})`);
